--- a/README
+++ b/README
@@ -1,1 +1,9 @@
+BelugaXtender 0.1
 Safari Extension for Beluga Group Chat.
+
+This software is inspired by Chrome Extension for Beluga by drikin.com.
+
+INSTALL
+please double click BelugaXtender.safariextz
+
+
