--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-BelugaXtender 0.1
+BelugaXtender 0.1.1
 Safari Extension for Beluga Group Chat.
 
 This software is inspired by Chrome Extension for Beluga by drikin.com.
@@ -6,4 +6,10 @@ This software is inspired by Chrome Extension for Beluga by drikin.com.
 INSTALL
 please double click BelugaXtender.safariextz
 
+What's new
+0.1.1
+Support find beluga tab from all browser windows.
+
+0.1 
+initial release
 
