--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-BelugaXtender 0.1.1
+BelugaXtender 0.1.2
 Safari Extension for Beluga Group Chat.
 
 This software is inspired by Chrome Extension for Beluga by drikin.com.
@@ -6,7 +6,16 @@ This software is inspired by Chrome Extension for Beluga by drikin.com.
 INSTALL
 please double click BelugaXtender.safariextz
 
+If you want to use to Growl, Please copy GrowlSafariBridge.webplugin to ~/Library/Internet Plugins/
+
+GrowlSafariBridge is written by uasi.
+and this software is distributed on https://github.com/uasi/growl-safari-bridge
+
+
 What's new
+0.1.2
+Support Growl by GrowlSafariBridge
+
 0.1.1
 Support find beluga tab from all browser windows.
 
