--- a/README
+++ b/README
@@ -13,7 +13,7 @@ https://github.com/uasi/growl-safari-bridge/downloads
 
 and move GrowlSafariBridge.webplugin to ~/Library/Internet Plugins/
 
-GrowlSafariBridge is written by quasi.
+GrowlSafariBridge is written by uasi.
 And this software is distributed on https://github.com/uasi/growl-safari-bridge/downloads
 
 
