--- a/README
+++ b/README
@@ -18,6 +18,10 @@ And this software is distributed on https://github.com/uasi/growl-safari-bridge/
 
 
 What's new
+0.2.1
+improve behavior calling growl
+fix typo(sorry uasi!)
+
 0.2
 Support auto open url function on background new tab from incoming messages
 Detach GrowlSafariBridge from Release Bundle
